--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
 		"drizzle-orm": "^0.29.5",
 		"formsnap": "^0.5.1",
 		"lucide-svelte": "^0.344.0",
+		"mode-watcher": "^0.2.2",
+		"svelte-sonner": "^0.3.19",
 		"sveltekit-superforms": "^2.8.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0"
