--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
 		"test": "vitest",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"db:push": "drizzle-kit push:sqlite"
+		"db:push": "drizzle-kit push:sqlite",
+		"studio": "drizzle-kit studio",
+		"seed": "node ./scripts/seed.js"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^8.4.1",
 		"@lucia-auth/adapter-drizzle": "^1.0.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
@@ -29,6 +32,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "2.36.0-next.9",
 		"lucia": "^3.0.1",
+		"nanoid": "^5.0.6",
 		"oslo": "^1.1.3",
 		"postcss": "^8.4.32",
 		"postcss-load-config": "^5.0.2",
@@ -55,6 +59,7 @@
 		"svelte-sonner": "^0.3.19",
 		"sveltekit-superforms": "^2.8.0",
 		"tailwind-merge": "^2.2.1",
-		"tailwind-variants": "^0.2.0"
+		"tailwind-variants": "^0.2.0",
+		"tsx": "^4.7.1"
 	}
 }
