--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"drizzle-kit": "^0.20.14",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "2.36.0-next.9",
+		"eslint-plugin-svelte": "2.36.0-next.10",
 		"lucia": "^3.0.1",
 		"nanoid": "^5.0.6",
 		"oslo": "^1.1.3",
@@ -40,7 +40,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.5.9",
-		"svelte": "^5.0.0-next.1",
+		"svelte": "5.0.0-next.85",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.3.6",
 		"tslib": "^2.4.1",
