--- a/package.json
+++ b/package.json
@@ -1,67 +1,71 @@
 {
-	"name": "purple",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test": "vitest",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
-		"db:push": "drizzle-kit push:sqlite",
-		"studio": "drizzle-kit studio"
-	},
-	"devDependencies": {
-		"@faker-js/faker": "^8.4.1",
-		"@lucia-auth/adapter-drizzle": "^1.0.2",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/enhanced-img": "^0.1.8",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/better-sqlite3": "^7.6.9",
-		"@types/eslint": "^8.56.0",
-		"@typescript-eslint/eslint-plugin": "^7.0.0",
-		"@typescript-eslint/parser": "^7.0.0",
-		"autoprefixer": "^10.4.16",
-		"better-sqlite3": "^9.4.3",
-		"drizzle-kit": "^0.20.14",
-		"drizzle-orm": "^0.30.5",
-		"eslint": "^8.56.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "2.36.0-next.10",
-		"lucia": "^3.0.1",
-		"nanoid": "^5.0.6",
-		"oslo": "^1.1.3",
-		"postcss": "^8.4.32",
-		"postcss-load-config": "^5.0.2",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"prettier-plugin-tailwindcss": "^0.5.9",
-		"svelte": "5.0.0-next.85",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.3.6",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3",
-		"vitest": "^1.2.0",
-		"zod": "^3.22.4"
-	},
-	"type": "module",
-	"dependencies": {
-		"@types/nodemailer": "^6.4.14",
-		"bits-ui": "^0.19.5",
-		"clsx": "^2.1.0",
-		"formsnap": "^0.5.1",
-		"lucide-svelte": "^0.344.0",
-		"mode-watcher": "^0.2.2",
-		"nodemailer": "^6.9.13",
-		"svelte-sonner": "^0.3.19",
-		"sveltekit-superforms": "^2.8.0",
-		"tailwind-merge": "^2.2.1",
-		"tailwind-variants": "^0.2.0",
-		"tsx": "^4.7.1"
-	}
+  "name": "purple",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "vitest",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
+    "db:push": "drizzle-kit push:sqlite",
+    "studio": "drizzle-kit studio"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@huntabyte/eslint-config": "^0.3.2",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "@sveltejs/adapter-auto": "^3.2.2",
+    "@sveltejs/enhanced-img": "^0.3.0",
+    "@sveltejs/kit": "^2.5.18",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@types/better-sqlite3": "^7.6.10",
+    "@types/eslint": "^8.56.10",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "autoprefixer": "^10.4.19",
+    "better-sqlite3": "^11.1.1",
+    "drizzle-kit": "^0.22.8",
+    "drizzle-orm": "^0.31.2",
+    "eslint": "^9.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "2.41.0",
+    "lucia": "^3.2.0",
+    "nanoid": "^5.0.7",
+    "oslo": "^1.2.1",
+    "phosphor-svelte": "^2.0.1",
+    "postcss": "^8.4.39",
+    "postcss-load-config": "^6.0.1",
+    "prettier": "^3.3.2",
+    "prettier-plugin-svelte": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "svelte": "5.0.0-next.169",
+    "svelte-check": "^3.8.4",
+    "svelte-eslint-parser": "^0.39.2",
+    "tailwindcss": "^3.4.4",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.2",
+    "vitest": "^1.6.0",
+    "zod": "^3.23.8"
+  },
+  "type": "module",
+  "dependencies": {
+    "@huntabyte/eslint-config": "^0.3.2",
+    "@types/nodemailer": "^6.4.15",
+    "bits-ui": "^0.21.11",
+    "clsx": "^2.1.1",
+    "formsnap": "^1.0.1",
+    "lucide-svelte": "^0.399.0",
+    "mode-watcher": "^0.3.1",
+    "nodemailer": "^6.9.14",
+    "svelte-sonner": "^0.3.24",
+    "sveltekit-superforms": "^2.15.2",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1",
+    "tsx": "^4.16.0"
+  }
 }
