some email refactoring

--- a/package.json
+++ b/package.json
@@ -22,12 +22,10 @@
 		"@sveltejs/enhanced-img": "^0.3.0",
 		"@sveltejs/kit": "^2.5.18",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@types/better-sqlite3": "^7.6.10",
 		"@types/eslint": "^8.56.10",
 		"@typescript-eslint/eslint-plugin": "^7.15.0",
 		"@typescript-eslint/parser": "^7.15.0",
 		"autoprefixer": "^10.4.19",
-		"better-sqlite3": "^11.1.1",
 		"drizzle-kit": "^0.22.8",
 		"drizzle-orm": "^0.31.2",
 		"eslint": "^9.6.0",
@@ -59,6 +57,7 @@
 		"@types/nodemailer": "^6.4.15",
 		"bits-ui": "^0.21.11",
 		"clsx": "^2.1.1",
+		"consola": "^3.2.3",
 		"formsnap": "^1.0.1",
 		"lucide-svelte": "^0.399.0",
 		"mode-watcher": "^0.3.1",
