wip file service

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 BASE_URL="http://localhost:5173"
+CF_ACCOUNT_ID=""
+CF_R2_API_TOKEN=""
+CF_R2_ACCESS_KEY_ID=""
+CF_R2_SECRET_ACCESS_KEY=""
+CF_R2_BUCKET_NAME=""
